--- a/html/OneShot.html
+++ b/html/OneShot.html
@@ -67,7 +67,7 @@
                 </div>
                 
                 <div class="box">
-                  <img src="..\images\vote.png" alt="Vote" class="Vote">
+                  <img src="..\images\Vote.png" alt="Vote" class="Vote">
                   <p><strong><em>"This game is truly one of the best I've ever played!<br>
                     I love the art styles, simple yet tricky puzzles and the<br>
                     endings! Easily my favorite game! 10 out of 10."</em></strong><br>
